changing file names to appropriate names

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </h1>
         </div>
         <div class="imageBoxLocation">
-            <img class="imageStyle" src="/images/project 1 png.png" alt="I do not own the rights to this image">
+            <img class="imageStyle" src="./images/image1.png" alt="I do not own the rights to this image">
         </div>
 
 
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div class="imageBoxLocation">
-            <img class="imageStyle" src="./images/untitled2.png" alt="I do not own the rights to this image">
+            <img class="imageStyle" src="./images/image2.png" alt="I do not own the rights to this image">
         </div>
 
         <div id="labExamples">
