--- a/Lab 5 - Alexander_Crone/index.html
+++ b/Lab 5 - Alexander_Crone/index.html
@@ -11,9 +11,6 @@
         <div class="logo">
             Website Name
         </div>
-        <a style="text-decoration: none; color: white;" href="../portfolio.html">Return to Portfolio</a>
-
-        
     </nav>
     <div class="topDivSection">
         <h1 class="goodVsBadSection">Good Design Vs. Bad Design</h1>
@@ -50,6 +47,7 @@
             <div class="box">
                 <a href="#section-yale">
                     <img src="Yale School of art.PNG" alt="Yale SOA">
+      
                     <div class="overlay">Yale School of Art</div>
                 </a>
             </div>
@@ -210,7 +208,7 @@
     <script>
         document.getElementById("overlappingBtn").addEventListener("click", function () {
             // Redirect to another HTML page
-            window.location.href = "../../portfolio.html";
+            window.location.href = "../../index.html";
         });
     </script>
 </body>
