--- a/Lab 7 - Alexander_Crone/Pages/pageOne.html
+++ b/Lab 7 - Alexander_Crone/Pages/pageOne.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <div class="wrapper">
     <header>
         <h1>Welcome to the World of Space Exploration</h1>
         <nav>
@@ -74,11 +75,10 @@
             </p>
         </section>
     </main>
-
-    <div style="display: flex; justify-content: center;">
-        <button id="overlappingBtn">Return to Portfolio</button>
-    </div>
-
+</div>
+<div style="display: flex; justify-content: center;">
+    <button id="overlappingBtn">Return to Portfolio</button>
+</div>
     <footer>
         <p>Alexander Crone</p>
     </footer>
