--- a/Lab 7 - Alexander_Crone/Pages/pageTwo.html
+++ b/Lab 7 - Alexander_Crone/Pages/pageTwo.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Space Exploration</title>
-    <link rel="stylesheet" type="text/css" href="../css/style1.css">
+    <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
 
 <body>
+    <div class="wrapper">
     <header>
         <h1>Welcome to the World of Space Exploration</h1>
         <nav>
             <ul>
-                <li><a href="pageTwo.html">Change Page Color and File</a></li>
+                <li><a href="pageOne.html">Change Page Color and File</a></li>
             </ul>
         </nav>
     </header>
@@ -74,11 +75,10 @@
             </p>
         </section>
     </main>
-
+    </div>
     <div style="display: flex; justify-content: center;">
         <button id="overlappingBtn">Return to Portfolio</button>
     </div>
-
     <footer>
         <p>Alexander Crone</p>
     </footer>
