--- a/Lab 1 - Alexander_Crone/B100 WD Homework.html
+++ b/Lab 1 - Alexander_Crone/B100 WD Homework.html
@@ -57,6 +57,12 @@
         #overlappingBtn:hover {
             background-color: #0d8de2;
         }
+
+        @media only screen and (max-width: 600px) {
+            #overlappingBtn {
+                width: 42vw;
+            }
+        }
     </style>
 </head>
 
@@ -93,7 +99,7 @@
     <script>
         document.getElementById("overlappingBtn").addEventListener("click", function () {
             // Redirect to another HTML page
-            window.location.href = "../portfolio.html";
+            window.location.href = "../index.html";
         });
     </script>
 </body>
