--- a/Lab 3 - Alexander_Crone/pages/espressoVarieties.html
+++ b/Lab 3 - Alexander_Crone/pages/espressoVarieties.html
@@ -169,7 +169,7 @@
     <script>
         document.getElementById("overlappingBtn").addEventListener("click", function () {
             // Redirect to another HTML page
-            window.location.href = "../../portfolio.html";
+            window.location.href = "../../index.html";
         });
     </script>
 
