--- a/Lab 4 - Alexander_Crone/pages/espressoVarieties.html
+++ b/Lab 4 - Alexander_Crone/pages/espressoVarieties.html
@@ -54,7 +54,6 @@
     <div style="display: flex;
     justify-content: center;">
         <div class="navbar">
-            <a href="../../portfolio.html">Return to Portfolio</a>
             <a href="index.html">The Art of Espresso Brewing</a>
             <a href="espressoVarieties.html">Espresso Varieties</a>
             <a>About</a>
@@ -170,7 +169,7 @@
     <script>
         document.getElementById("overlappingBtn").addEventListener("click", function () {
             // Redirect to another HTML page
-            window.location.href = "../../portfolio.html";
+            window.location.href = "../../index.html";
         });
     </script>
     
