--- a/Lab 6 - Alexander_Crone/Pages/pageTwo.html
+++ b/Lab 6 - Alexander_Crone/Pages/pageTwo.html
@@ -86,7 +86,7 @@
     <script>
         document.getElementById("overlappingBtn").addEventListener("click", function () {
             // Redirect to another HTML page
-            window.location.href = "../../portfolio.html";
+            window.location.href = "../../index.html";
         });
     </script>
 </body>
