saving progress, currently working on a contact page, already implemented email.js functionality, just need to finish styling

--- a/index.html
+++ b/index.html
@@ -23,10 +23,16 @@
 
             <ul class="social-icons">
                 <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                </ul>
+                <ul class="nav-links">
                     <li><a href="#about">About Me</a></li>
                 </ul>
                 <ul class="nav-links">
                     <li><a href="#labExamples">My Work</a></li>
+                </ul>
+                <ul class="nav-links">
+                    <li><a href="contact.html">Contact Me</a></li>
                 </ul>
                 <li><a title="Facebook" href="https://www.facebook.com/"><ion-icon size="large"
                             name="logo-facebook"></ion-icon></a></li>
@@ -39,8 +45,10 @@
         </div>
     </nav>
     <div class="navToggle">
+        <a href="index.html">Home</a>
         <a href="#about">About Me</a>
         <a href="#labExamples">My Work</a>
+        <a href="contact.html">Contact Me</a>
         <a title="Facebook" href="https://www.facebook.com/"><ion-icon size="large" name="logo-facebook"></ion-icon></a>
         <a title="Twitter" href="https://twitter.com/"><ion-icon size="large" name="logo-twitter"></ion-icon></a>
         <a title="Instagram" href="https://www.instagram.com/"><ion-icon size="large"
