added my semester project to the lab area

--- a/index.html
+++ b/index.html
@@ -271,6 +271,22 @@
                     enhancing the overall user experience.
                 </div>
             </div>
+            <div class="labBox">
+                <div class="box">
+                    <a href="./Project Final - Alexander Crone/HTML/Home.html">
+                        <img src="./images/project final.PNG" alt="Lab 11">
+                    </a>
+                </div>
+                <div class="labBoxDescription">
+                    <h3>Semester Project</h3>
+                    In my semester project, I designed a sleek login/homepage screen featuring a responsive login menu using
+                    JavaScript.
+                    The screen not only looks neat but also adapts seamlessly to different devices.
+                    I added functionality, allowing users to access different pop-ups for actions like "Forgot Password"
+                    and registration,
+                    enhancing the overall user experience.
+                </div>
+            </div>
         </div>
     </main>
     <footer id="socialMediaSection">
