--- a/Lab 10 - Alexander_Crone/index.html
+++ b/Lab 10 - Alexander_Crone/index.html
@@ -97,7 +97,7 @@ justify-content: center;">
     </div>
     <script>document.getElementById("overlappingBtn").addEventListener("click", function () {
         // Redirect to another HTML page
-        window.location.href = "../../index.html";
+        window.location.href = "./../index.html";
     });</script>
 
 </body>
