--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     </main>
     <footer id="socialMediaSection">
         <div class="footer-content">
-            <a>Thanks for visiting my portfolio site :)</a>
+            <a>Thanks for visiting my portfolio site!</a>
         </div>
     </footer>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
